address commits
Signed-off-by: Arpit Bandejiya <abandeji@amazon.com>